--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "A tool to learn OWASP Top 10 for node.js developers",
   "main": "server.js",
   "dependencies": {
+    "@storybook/react": "^6.3.12",
+    "@vue/cli-service": "^4.5.15",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "consolidate": "^0.14.1",
