--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@storybook/react": "^6.3.12",
     "@vue/cli-service": "^4.5.15",
+    "node-sass": "4.14.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "consolidate": "^0.14.1",
